clusters/ha-cluster/monitoring/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-grafana
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.plutolab.live`)
      kind: Rule
      services:
        - name: kube-prometheus-grafana
          port: 80
  tls:
    secretName: plutolab-live-tls
